unified_tests/function_calls/function_value_arity_mismatch/expect/build.text.stderr
lib.copp:2:18: error: expected 1 arguments, got 2
      return mapper(1, 2)
                   ^
